--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <form class="box" action="login.html" method="POST">
 
 <h1>
-    login
+    Login
 </h1>
 <input type="text" name="" placeholder="Username" id="username">
 <input type="password" name="" placeholder="Password" id="password">
